@@ -169,6 +169,7 @@
 					</annotationProcessorPaths>
                     <source>21</source>
                     <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
 			</plugin>
 			<plugin>
